fixed headline alignment

--- a/style.css
+++ b/style.css
@@ -4,20 +4,19 @@
   margin: 0;
 }
 
-
 :root {
   --font-jost: "Jost", sans-serif;
   --font-roboto: "Roboto", sans-serif;
   --font-color-dark: #555555;
   --font-color-light: white;
-  --checkbox-color: #D9D9D9;
-  --main-color: #62BFED;
-  --header-color: #C7E2FF;
+  --checkbox-color: #d9d9d9;
+  --main-color: #62bfed;
+  --header-color: #c7e2ff;
   --footer-color: #404040;
-  --deletebox-color: #8D4343;
+  --deletebox-color: #8d4343;
 }
 
-body{
+body {
   font-family: var(--font-roboto);
 }
 
@@ -55,9 +54,9 @@ main {
 }
 
 input[type="checkbox"] {
-  width: 2rem;                         /* Set width */
-  height: 2rem;                        /* Set height */
-  clip-path: circle(43% at 50% 50%);   /* Set the clip path of circle*/
+  width: 2rem; /* Set width */
+  height: 2rem; /* Set height */
+  clip-path: circle(43% at 50% 50%); /* Set the clip path of circle*/
   border: 0.15rem solid lightgray;
   cursor: pointer;
   accent-color: var(--main-color);
@@ -95,11 +94,10 @@ input[type="checkbox"] {
   outline: dotted 0.1rem;
   margin-top: 0.52rem;
   margin-left: 1rem;
-  text-align:center;
+  text-align: center;
   vertical-align: center;
   cursor: pointer;
   color: var(--font-color-dark);
-
 }
 
 .deleteItemBtn:hover {
@@ -139,7 +137,7 @@ input[type="checkbox"] {
 }
 
 .taskCreator input:focus::placeholder {
-  color:transparent
+  color: transparent;
 }
 
 .addBtn {
@@ -199,7 +197,7 @@ nav {
   text-align: center;
   font-size: 1.5rem;
   margin: 0;
-  padding-right: 16rem;
+  padding-right: 12.5rem;
 }
 
 /* .nav-right {
@@ -291,12 +289,11 @@ footer {
 
 /* End styling for Nav & Footer */
 
-
 .editInputBox {
   border-radius: 0.5rem;
   width: auto;
   /* margin: 1rem; */
-  height: 2rem; 
+  height: 2rem;
   text-align: center;
   font-size: 1rem;
   outline-color: var(--main-color);
